modificação do css e html para tela 4k

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 	<body>
 		<nav class="an_info">
-			<img width="98px" src="Assets/Astra News.png">
+			<img width="350px" src="Assets/Astra News.png">
 
 			<ul class="an_contato">
 				<li>
-					<a href="#">Sobre nós</a>
+					<a class="an_media-links" href="#">Sobre nós</a>
 				</li>
 				<li>
-					<a href="#">Fale Conosco</a>
+					<a class="an_media-links" href="#">Fale Conosco</a>
 				</li>
 			</ul>
 		</nav>
@@ -35,17 +35,19 @@
 		<main>
 			<div class="an_background">
 				<div class="an_news">
-					<div>
-						<img width="140px" src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
-					</div>
-					<div>
-						<a>Título</a>
-					</div>
-					<div>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
+					<div class="an_blog">
+						<div class="an_banner">
+							<img width="650px" src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
+						</div>
+						<div class="an_title">
+							<a class="an_banner-title" href="#">Título</a>
+						</div>
+						<div class="an_description">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
+						</div>
 					</div>
 					<div class="adsense">
-						<img src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7">
+						<img width="490px" src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7">
 					</div>
 				</div>
 			</div>
