Ajuste da posição dos elementos no site.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 
 	<body>
 		<nav class="an_info">
-			<img width="350px" src="Assets/Astra News.png">
+			<div class="an_logo">
+				<img src="Assets/Astra News.png">
+			</div>
 
-			<ul class="an_contato">
-				<li>
-					<a class="an_media-links" href="#">Sobre nós</a>
-				</li>
-				<li>
-					<a class="an_media-links" href="#">Fale Conosco</a>
-				</li>
-			</ul>
+			<div class="an_tele">
+				<ul class="an_contato">
+					<li>
+						<a class="an_media-links" href="#">Sobre nós</a>
+					</li>
+					<li>
+						<a class="an_media-links" href="#">Fale Conosco</a>
+					</li>
+				</ul>
+			</div>
 		</nav>
 
 		<nav class="an_menu">
@@ -34,20 +38,63 @@
 
 		<main>
 			<div class="an_background">
+				<div class="adsense">
+					<img src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7">
+				</div>
+
 				<div class="an_news">
 					<div class="an_blog">
-						<div class="an_banner">
-							<img width="650px" src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
+						<div id="box1" class="an_banner">
+							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
 						</div>
-						<div class="an_title">
-							<a class="an_banner-title" href="#">Título</a>
+						<div id="box2" class="an_title">
+							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
 						</div>
-						<div class="an_description">
+						<div id="box3" class="an_description">
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
 						</div>
 					</div>
-					<div class="adsense">
-						<img width="490px" src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7">
+				</div>
+
+				<div class="an_news">
+					<div class="an_blog">
+						<div id="box1" class="an_banner">
+							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
+						</div>
+						<div id="box2" class="an_title">
+							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
+						</div>
+						<div id="box3" class="an_description">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="an_news">
+					<div class="an_blog">
+						<div id="box1" class="an_banner">
+							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
+						</div>
+						<div id="box2" class="an_title">
+							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
+						</div>
+						<div id="box3" class="an_description">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="an_news">
+					<div class="an_blog">
+						<div id="box1" class="an_banner">
+							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
+						</div>
+						<div id="box2" class="an_title">
+							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
+						</div>
+						<div id="box3" class="an_description">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
+						</div>
 					</div>
 				</div>
 			</div>
