--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 		<title>Astra News</title>
 
 		<link rel="stylesheet" href="skin.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 	</head>
 
 	<body>
 		<nav class="an_info">
 			<div class="an_logo">
-				<img src="Assets/Astra News.png">
+				<img src="Assets/Astra News Black.png">
 			</div>
 
 			<div class="an_tele">
@@ -39,7 +40,11 @@
 		<main>
 			<div class="an_background">
 				<div class="adsense">
+					<h2>Ads</h2>
+
 					<img src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7">
+
+					<h2>Ads</h2>
 				</div>
 
 				<div class="an_news">
