reajuste do tamanho dos elementos no css.

--- a/index.html
+++ b/index.html
@@ -1,108 +1,161 @@
 <!DOCTYPE html>
 
 <html lang="pt_BR">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-		<title>Astra News</title>
+        <title>Astra News</title>
 
-		<link rel="stylesheet" href="skin.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-	</head>
+        <link rel="stylesheet" href="skin.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Trirong"
+        />
+    </head>
 
-	<body>
-		<nav class="an_info">
-			<div class="an_logo">
-				<img src="Assets/Astra News Black.png">
-			</div>
+    <body>
+        <header>
+            <nav class="an_info">
+                <div class="an_logo">
+                    <img src="Assets/Astra News Black.png" alt="none" />
+                </div>
 
-			<div class="an_tele">
-				<ul class="an_contato">
-					<li>
-						<a class="an_media-links" href="#">Sobre nós</a>
-					</li>
-					<li>
-						<a class="an_media-links" href="#">Fale Conosco</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+                <div class="an_tele">
+                    <ul class="an_contato">
+                        <li>
+                            <a class="an_media-links" href="#">Sobre nós</a>
+                        </li>
+                        <li>
+                            <a class="an_media-links" href="#">Fale Conosco</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
-		<nav class="an_menu">
-			<a class="an_topico" href="#">Home</a>
-			<a class="an_topico" href="#">Home</a>
-			<a class="an_topico" href="#">Home</a>
-			<a class="an_topico" href="#">Home</a>
-			<a class="an_topico" href="#">Home</a>
-		</nav>
+            <nav class="an_menu">
+                <a class="an_topico" href="#">Home</a>
+                <a class="an_topico" href="#">Home</a>
+                <a class="an_topico" href="#">Home</a>
+                <a class="an_topico" href="#">Home</a>
+                <a class="an_topico" href="#">Home</a>
+            </nav>
+        </header>
 
-		<main>
-			<div class="an_background">
-				<div class="adsense">
-					<h2>Ads</h2>
+        <main>
+            <div class="an_background">
+                <div class="adsense">
+                    <h2>Ads</h2>
 
-					<img src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7">
+                    <img
+                        src="https://th.bing.com/th/id/OIP.f4UN6f3VLbJv3ypUiTwQaQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7"
+                        alt="none"
+                    />
 
-					<h2>Ads</h2>
-				</div>
+                    <h2>Ads</h2>
+                </div>
 
-				<div class="an_news">
-					<div class="an_blog">
-						<div id="box1" class="an_banner">
-							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
-						</div>
-						<div id="box2" class="an_title">
-							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
-						</div>
-						<div id="box3" class="an_description">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
-						</div>
-					</div>
-				</div>
+                <div class="an_news">
+                    <div class="an_blog">
+                        <div id="box1" class="an_banner">
+                            <img
+                                src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197"
+                                alt="none"
+                            />
+                        </div>
+                        <div id="box2" class="an_title">
+                            <a class="an_banner-title" href="#"
+                                >Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit.</a
+                            >
+                        </div>
+                        <div id="box3" class="an_description">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit. Sapiente et eum sint
+                                molestias perspiciatis doloremque voluptates
+                                aliquam quas quaerat incidunt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
-				<div class="an_news">
-					<div class="an_blog">
-						<div id="box1" class="an_banner">
-							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
-						</div>
-						<div id="box2" class="an_title">
-							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
-						</div>
-						<div id="box3" class="an_description">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
-						</div>
-					</div>
-				</div>
+                <div class="an_news">
+                    <div class="an_blog">
+                        <div id="box1" class="an_banner">
+                            <img
+                                src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197"
+                                alt="none"
+                            />
+                        </div>
+                        <div id="box2" class="an_title">
+                            <a class="an_banner-title" href="#"
+                                >Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit.</a
+                            >
+                        </div>
+                        <div id="box3" class="an_description">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit. Sapiente et eum sint
+                                molestias perspiciatis doloremque voluptates
+                                aliquam quas quaerat incidunt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
-				<div class="an_news">
-					<div class="an_blog">
-						<div id="box1" class="an_banner">
-							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
-						</div>
-						<div id="box2" class="an_title">
-							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
-						</div>
-						<div id="box3" class="an_description">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
-						</div>
-					</div>
-				</div>
+                <div class="an_news">
+                    <div class="an_blog">
+                        <div id="box1" class="an_banner">
+                            <img
+                                src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197"
+                                alt="none"
+                            />
+                        </div>
+                        <div id="box2" class="an_title">
+                            <a class="an_banner-title" href="#"
+                                >Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit.</a
+                            >
+                        </div>
+                        <div id="box3" class="an_description">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit. Sapiente et eum sint
+                                molestias perspiciatis doloremque voluptates
+                                aliquam quas quaerat incidunt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
-				<div class="an_news">
-					<div class="an_blog">
-						<div id="box1" class="an_banner">
-							<img src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197">
-						</div>
-						<div id="box2" class="an_title">
-							<a class="an_banner-title" href="#">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</a>
-						</div>
-						<div id="box3" class="an_description">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sapiente et eum sint molestias perspiciatis doloremque voluptates aliquam quas quaerat incidunt.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</main>
-	</body>
+                <div class="an_news">
+                    <div class="an_blog">
+                        <div id="box1" class="an_banner">
+                            <img
+                                src="https://cdn.slidesharecdn.com/ss_thumbnails/espaosideral-140326135756-phpapp01-thumbnail-4.jpg?cb=1395844197"
+                                alt="none"
+                            />
+                        </div>
+                        <div id="box2" class="an_title">
+                            <a class="an_banner-title" href="#"
+                                >Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit.</a
+                            >
+                        </div>
+                        <div id="box3" class="an_description">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing, elit. Sapiente et eum sint
+                                molestias perspiciatis doloremque voluptates
+                                aliquam quas quaerat incidunt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
