tamanho min, mudança na cor de elementos e fonte.

--- a/index.html
+++ b/index.html
@@ -157,5 +157,7 @@
                 </div>
             </div>
         </main>
+
+        <span title="commits" style="color: white">Commits</span>
     </body>
 </html>
